--- a/InvoiceApp/Views/Invoices/Edit.cshtml
+++ b/InvoiceApp/Views/Invoices/Edit.cshtml
@@ -95,7 +95,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save Changes" class="btn btn-default" />
             </div>
         </div>
     </div>
@@ -107,4 +107,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/CustomInvoiceScripts")
 }
