--- a/InvoiceApp/Views/Invoices/Delete.cshtml
+++ b/InvoiceApp/Views/Invoices/Delete.cshtml
@@ -1,79 +1,91 @@
-﻿@model InvoiceApp.Models.Invoice
+﻿@model InvoiceApp.ViewModels.Invoice_ViewModel
 
 @{
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete An Invoice</h2>
+<div class="formWrapper">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Invoice</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.customer.FirstName)
+            @Html.DisplayNameFor(model => model.BaseCustomerViewModel.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.customer.FirstName)
+            @Html.DisplayFor(model => model.BaseCustomerViewModel.FirstName)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.product.Name)
+            @Html.DisplayNameFor(model => model.BaseCustomerViewModel.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.product.Name)
+            @Html.DisplayFor(model => model.BaseCustomerViewModel.Email)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.InvoiceCreationDate)
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.InvoiceDueDate)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.InvoiceCreationDate)
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.InvoiceDueDate)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.InvoiceDueDate)
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.ProductName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.InvoiceDueDate)
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.ProductName)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.ProductDescription)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.ProductDescription)
+        </dd>
+
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.Price)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.Price)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.Quantity)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.Quantity)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Quantity)
+            @Html.DisplayNameFor(model => model.BaseInvoiceViewModel.Tax)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Quantity)
+            @Html.DisplayFor(model => model.BaseInvoiceViewModel.Tax)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Tax)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Tax)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.GrossTotal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.GrossTotal)
-        </dd>
 
     </dl>
+
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
