--- a/InvoiceApp/Views/Invoices/Index.cshtml
+++ b/InvoiceApp/Views/Invoices/Index.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Invoices</h2>
 <div class="container">
-    <div class="invoiceContent">
+    <div class="formWrapper">
 
         @{ Html.RenderAction("ManageInvoiceAmount", "Invoices"); }
 
