--- a/InvoiceApp/Content/invoices.css
+++ b/InvoiceApp/Content/invoices.css
@@ -74,13 +74,19 @@ div.message.error {
 
 /*End of WARNING AND ERROR BOXES*/
 
-.invoiceContent{
+.formWrapper{
     position: relative;
     padding: 30px 35px 20px 35px;
     margin: 30px 10px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.3);
     background: #FFF none repeat scroll 0% 0%;
     color: #000;
+}
+
+.formWrapper .newInvoiceButton{
+    float:right;
+    margin-right:20px;
+    margin-top:30px;
 }
 
 .invoiceSummary{
@@ -127,9 +133,5 @@ div.message.error {
     padding: 0px 0px 5px 15px;
 }
 
-.invoiceContent .newInvoiceButton{
-    float:right;
-    margin-right:20px;
-    margin-top:30px;
-}
+
 
